fix layout issue and 404 font error

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,15 +5,14 @@
 @layer base {
   @font-face {
     font-family: Questrial;
-    src: local("Questrial"), url(../fonts/Questrial-Regular.woff2)
-      format("woff2");
+    src: local("Questrial"), url(/fonts/Questrial-Regular.woff2) format("woff2");
     font-style: normal;
     font-weight: 400;
     line-height: normal;
   }
   @font-face {
     font-family: "Helvetica Neue";
-    src: url(./fonts/HelveticaNeueRoman.woff2) format("woff2");
+    src: url(/fonts/HelveticaNeueRoman.woff2) format("woff2");
     font-style: normal;
     font-weight: 400;
     line-height: normal;
